--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,85 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>MyApp</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <title>MyApp</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- <script src="../node_modules/html5-qrcode/minified/html5-qrcode.min.js"></script> -->
+    <script src="https://raw.githubusercontent.com/mebjas/html5-qrcode/master/minified/html5-qrcode.min.js"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.min.js"
+      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+      crossorigin="anonymous"
+    ></script>
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  </head>
+  <body>
+    <app-root></app-root>
+    test
+    <style>
+      #preview {
+        width: 500px;
+        height: 500px;
+        margin: 0px auto;
+      }
+    </style>
+    <video id="preview"></video>
+    <script src="https://rawgit.com/schmich/instascan-builds/master/instascan.min.js"></script>
+    <script type="text/javascript">
+      var scanner = new Instascan.Scanner({
+        video: document.getElementById("preview"),
+        scanPeriod: 5,
+        mirror: false,
+      });
+      scanner.addListener("scan", function (content) {
+        alert(content);
+        //window.location.href=content;
+      });
+      Instascan.Camera.getCameras()
+        .then(function (cameras) {
+          if (cameras.length > 0) {
+            scanner.start(cameras[0]);
+            $('[name="options"]').on("change", function () {
+              if ($(this).val() == 1) {
+                if (cameras[0] != "") {
+                  scanner.start(cameras[0]);
+                } else {
+                  alert("No Front camera found!");
+                }
+              } else if ($(this).val() == 2) {
+                if (cameras[1] != "") {
+                  scanner.start(cameras[1]);
+                } else {
+                  alert("No Back camera found!");
+                }
+              }
+            });
+          } else {
+            console.error("No cameras found.");
+            alert("No cameras found.");
+          }
+        })
+        .catch(function (e) {
+          console.error(e);
+          alert(e);
+        });
+    </script>
+    <div class="btn-group btn-group-toggle mb-5" data-toggle="buttons">
+      <label class="btn btn-primary active">
+        <input
+          type="radio"
+          name="options"
+          value="1"
+          autocomplete="off"
+          checked
+        />
+        Front Camera
+      </label>
+      <label class="btn btn-secondary">
+        <input type="radio" name="options" value="2" autocomplete="off" /> Back
+        Camera
+      </label>
+    </div>
+  </body>
 </html>
