--- a/src/index.html
+++ b/src/index.html
@@ -5,18 +5,17 @@
     <title>MyApp</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!-- <script src="../node_modules/html5-qrcode/minified/html5-qrcode.min.js"></script> -->
-    <script src="https://raw.githubusercontent.com/mebjas/html5-qrcode/master/minified/html5-qrcode.min.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.5.1.min.js"
       integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
       crossorigin="anonymous"
     ></script>
+    <script src="https://rawgit.com/schmich/instascan-builds/master/instascan.min.js"></script>
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
     <app-root></app-root>
-    test
+    <!-- test
     <style>
       #preview {
         width: 500px;
@@ -25,7 +24,6 @@
       }
     </style>
     <video id="preview"></video>
-    <script src="https://rawgit.com/schmich/instascan-builds/master/instascan.min.js"></script>
     <script type="text/javascript">
       var scanner = new Instascan.Scanner({
         video: document.getElementById("preview"),
@@ -80,6 +78,6 @@
         <input type="radio" name="options" value="2" autocomplete="off" /> Back
         Camera
       </label>
-    </div>
+    </div> -->
   </body>
 </html>
